chore(uniquet): fixing uniquet bug